removed popup for fixed box, shifted map instructions

--- a/Pearson_World_Journal/frontend/src/pages/MapPage.module.css
+++ b/Pearson_World_Journal/frontend/src/pages/MapPage.module.css
@@ -109,11 +109,11 @@
 
 .instructionsContainer {
   position: fixed;
-  top: 350px;
-  left: 70px;
+  top: 720px;
+  right: 70px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 3px;
   z-index: 1000;
 }
 
